--- a/list_packages.yml
+++ b/list_packages.yml
@@ -1,6 +1,4 @@
-- name: Hello World Sample
-  hosts: all
-  tasks:
-    - name: Hello Message
-      debug:
-        msg: "Hello World!"
+- name: yum_command 
+  yum:
+    list=installed
+  register: yum_packages
