--- a/list_packages.yml
+++ b/list_packages.yml
@@ -6,5 +6,7 @@
         list=installed
       register: yum_packages
 
-    - debug:
-        var: yum_packages
+    - debug: var=item
+      with_items: "{{yum_packages|json_query(jsonquery)}}"
+      vars:
+        jsonquery: "results[?name=='tar']"
