--- a/list_packages.yml
+++ b/list_packages.yml
@@ -9,4 +9,4 @@
     - debug: var=item
       with_items: "{{yum_packages|json_query(jsonquery)}}"
       vars:
-        jsonquery: "results[?name=='tar']"
+        jsonquery: "results[?name=='wget']"
