--- a/windows-updates-all.yml
+++ b/windows-updates-all.yml
@@ -1,32 +1,28 @@
 - name: Install updates
   hosts: all
   tasks:
- 
-   # Check if there are missing updates
-    – block:
-        – name: Check for missing updates.
-          win_updates: state=searched
-          register: update_count
-          - debug: update_count
- 
-    #Install missing updates only if at least one is missing
-    – block:
-        – name: Install missing updates.
-          win_updates:
-            category_names:
-              – Application
-              – Connectors
-              – DefinitionUpdates
-              – DeveloperKits
-              – FeaturePacks
-              – Guidance
-              – ServicePacks
-              – Tools
-              – UpdateRollups
-              – CriticalUpdates
-              – SecurityUpdates
-          register: update_result
-        – name: Reboot, if needed.
-          win_reboot:
-          when: update_result.reboot_required
-      when: update_count.found_update_count|int >= 1
+   - name: Check for missing updates.
+     win_updates: state=searched
+     register: update_count
+   - debug: update_count  
+
+
+    – name: Install missing updates.
+      win_updates:
+        category_names:
+          – Application
+          – Connectors
+          – DefinitionUpdates
+          – DeveloperKits
+          – FeaturePacks
+          – Guidance
+          – ServicePacks
+          – Tools
+          – UpdateRollups
+          – CriticalUpdates
+          – SecurityUpdates
+      register: update_result
+    – name: Reboot, if needed.
+      win_reboot:
+      when: update_result.reboot_required
+  when: update_count.found_update_count|int >= 1
