--- a/windows-updates-all.yml
+++ b/windows-updates-all.yml
@@ -4,29 +4,28 @@
   tasks:
  
    # Check if there are missing updates
-    – block:
-        – name: Check for missing updates.
-          win_updates: state=searched
-          register: update_count
+   - name: Check for missing updates.
+     win_updates: state=searched
+     register: update_count
+        
  
     #Install missing updates only if at least one is missing
-    – block:
-        – name: Install missing updates.
-          win_updates:
-            category_names:
-              – Application
-              – Connectors
-              – DefinitionUpdates
-              – DeveloperKits
-              – FeaturePacks
-              – Guidance
-              – ServicePacks
-              – Tools
-              – UpdateRollups
-              – CriticalUpdates
-              – SecurityUpdates
-          register: update_result
-        – name: Reboot, if needed.
-          win_reboot:
-          when: update_result.reboot_required
-      when: update_count.found_update_count|int >= 1
+   - name: Install missing updates.
+     win_updates:
+       category_names:
+         – Application
+         – Connectors
+         – DefinitionUpdates
+         – DeveloperKits
+         – FeaturePacks
+         – Guidance
+         – ServicePacks
+         – Tools
+         – UpdateRollups
+         – CriticalUpdates
+         – SecurityUpdates
+     register: update_result
+   - name: Reboot, if needed.
+     win_reboot:
+     when: update_result.reboot_required
+  when: update_count.found_update_count|int >= 1
