--- a/windows-updates-all.yml
+++ b/windows-updates-all.yml
@@ -1,23 +1,22 @@
 - name: Install updates
   hosts: all
- 
+  gather_facts: false
   tasks:
  
    # Check if there are missing updates
-   - name: Check for missing updates.
-     win_updates: state=searched
-     register: update_count
+    - name: Check for missing updates.
+      win_updates: state=searched
+      register: update_count
         
  
     #Install missing updates only if at least one is missing
-   - name: Install missing updates.
-     win_updates:
+    - name: Install missing updates.
+      win_updates:
        category_names: ['SecurityUpdates','CriticalUpdates','UpdateRollups', 'Updates', 'DefinitionUpdates']
-     register: result
+      register: result
 
     # output results
-    - debug: var=result
-   - name: Reboot, if needed.
-     win_reboot:
-     when: result.reboot_required
-  when: update_count.found_update_count|int >= 1
+     - debug: var=result
+    - name: Reboot, if needed.
+      win_reboot:
+      when: result.reboot_required
