--- a/windows-updates-all.yml
+++ b/windows-updates-all.yml
@@ -5,7 +5,7 @@
  
    # Check if there are missing updates
     - name: Check for missing updates.
-      win_updates: state=searched
+      win_updates: state=installed
       register: update_count
         
  
@@ -16,7 +16,7 @@
       register: result
 
     # output results
-     - debug: var=result
+     
     - name: Reboot, if needed.
       win_reboot:
       when: result.reboot_required
