--- a/list_packages.yml
+++ b/list_packages.yml
@@ -9,4 +9,4 @@
     - debug: var=item
       with_items: "{{yum_packages|json_query(jsonquery)}}"
       vars:
-        jsonquery: "results[?name=='httpd','wget']"
+        jsonquery: "results[?name=='httpd',?name=='httpd']"
