--- a/list_packages.yml
+++ b/list_packages.yml
@@ -9,4 +9,5 @@
     - debug: var=item
       with_items: "{{yum_packages|json_query(jsonquery)}}"
       vars:
-        jsonquery: "results[?name=='wget'],results[?name=='httpd']"
+        jsonquery: "results[?name=='wget']"
+        jsonquery: "results2[?name=='httpd']"
