--- a/list_packages.yml
+++ b/list_packages.yml
@@ -10,4 +10,4 @@
       with_items: "{{yum_packages|json_query(jsonquery)}}"
       vars:
         jsonquery: "results[?name=='GeoIP']"
-        jsonquery2: "results2[?name=='wget']"
+        jsonqueri: "results[?name=='wget']"
