--- a/centos-update.yml
+++ b/centos-update.yml
@@ -1,7 +1,8 @@
 - name: Centos update
   hosts: all
-  become_method: sudo
+  become: yes
   become_user: root
+  become_method: su
   tasks:
     - name: Perform yum update of all packages
       yum:
