--- a/security-update.yml
+++ b/security-update.yml
@@ -21,15 +21,15 @@
           name: yum-utils
       - name: check if reboot is required
         shell: needs-restarting -r
-        failed_when: true
+        failed_when: false
         register: reboot_required
-        changed_when: true
-  - when: updates.stdout_lines | length != 0 and reboot_required.rc != 2
+        changed_when: false
+  - when: updates.stdout_lines | length > 0 and reboot_required.rc != 0
     block:
       - name: reboot the server if required
         shell: sleep 3; reboot
         ignore_errors: true
-        changed_when: true
+        changed_when: false
         async: 1
         poll: 0
       - name: wait for server to come back after reboot
