--- a/windows-updates-all.yml
+++ b/windows-updates-all.yml
@@ -6,7 +6,7 @@
     
    # Check if there are missing updates
     - name: Check for missing updates.
-      win_updates: state=installed
+      win_updates: state=searched
       register: update_count
         
  
