--- a/windows_update.yml
+++ b/windows_update.yml
@@ -9,13 +9,13 @@
        register: result
    
        
-   #- name: install all critical and security updates
-    # win_updates:
-     #  category_names:
-      # - CriticalUpdates
-       #- SecurityUpdates
-       #state: installed
-     #register: update_result
+   - name: install all critical and security updates
+     win_updates:
+       category_names:
+       - CriticalUpdates
+       - SecurityUpdates
+       state: installed
+     register: update_result
 
    - name: Install only particular updates based on the KB numbers (KB4048953)
      win_updates:
